--- a/src/Facet/Facet.csproj
+++ b/src/Facet/Facet.csproj
@@ -8,9 +8,9 @@
 		<IsPackable>true</IsPackable>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<PackageId>Facet</PackageId>
-		<Version>1.6.0</Version>
+		<Version>1.7.0</Version>
 		<Authors>Tim Maes</Authors>
-		<Description>A Roslyn source generator for lean DTOs, smart projections, and custom mappers.</Description>
+		<Description>A Roslyn source generator for lean DTOs.</Description>
 		<PackageTags>source-generator dto projection redaction facet</PackageTags>
 		<RepositoryUrl>https://github.com/Tim-Maes/Facet</RepositoryUrl>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
