--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,10 +5,10 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - 'main'
+      - "main"
   pull_request:
     branches:
-      - '*'
+      - "*"
   release:
     types:
       - published
@@ -32,6 +32,10 @@ jobs:
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: |
+            8.0.x
+            9.0.x
 
       - name: Build Solution
         run: dotnet build --configuration Release
@@ -49,7 +53,7 @@ jobs:
   deploy:
     if: github.event_name == 'release'
     runs-on: ubuntu-latest
-    needs: [ create_nuget ]
+    needs: [create_nuget]
     steps:
       - uses: actions/download-artifact@v4
         with:
@@ -58,6 +62,10 @@ jobs:
 
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: |
+            8.0.x
+            9.0.x
 
       - name: Publish NuGet packages
         run: |
