--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,8 +50,8 @@ jobs:
     - name: Build
       run: dotnet build --configuration Release --no-restore
     
-    - name: Test
-      run: dotnet test --configuration Release --no-build --verbosity normal
+    - name: Run Unit Tests
+      run: dotnet test test/Facet.Tests --configuration Release --no-build --verbosity normal
     
     - name: Pack NuGet packages
       run: dotnet pack --configuration Release --no-build --output ./artifacts
