--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,7 +51,7 @@ jobs:
       run: dotnet build --configuration Release --no-restore
     
     - name: Run Unit Tests
-      run: dotnet test test/Facet.Tests --configuration Release --no-build --verbosity normal
+      run: dotnet test --configuration Release --no-build --verbosity normal
     
     - name: Pack NuGet packages
       run: dotnet pack --configuration Release --no-build --output ./artifacts
