--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,11 @@ on:
     branches:
       - "*"
 
+permissions:
+  contents: read
+  checks: write
+  pull-requests: write
+
 env:
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
   DOTNET_NOLOGO: true
@@ -48,6 +53,14 @@ jobs:
       - name: Pack NuGet Packages
         run: dotnet pack --configuration Release --no-build --output ${{ env.NuGetDirectory }}
 
+      - name: Upload Test Results
+        uses: actions/upload-artifact@v4
+        if: success() || failure()
+        with:
+          name: test-results
+          path: TestResults/*.trx
+          retention-days: 7
+
       - name: Publish Test Results
         uses: dorny/test-reporter@v1
         if: success() || failure()
@@ -55,6 +68,7 @@ jobs:
           name: Unit Test Results
           path: TestResults/*.trx
           reporter: dotnet-trx
+          fail-on-error: false
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
