--- a/src/Facet.Extensions.EFCore/Facet.Extensions.EFCore.csproj
+++ b/src/Facet.Extensions.EFCore/Facet.Extensions.EFCore.csproj
@@ -23,4 +23,9 @@
         <None Include="README.md" Pack="true" PackagePath="" />
     </ItemGroup>
 
+    <!-- Resolve System.Collections.Immutable version conflict for net8.0 -->
+    <ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
+        <PackageReference Include="System.Collections.Immutable" />
+    </ItemGroup>
+
 </Project>
