--- a/src/Facet.Extensions/Facet.Extensions.csproj
+++ b/src/Facet.Extensions/Facet.Extensions.csproj
@@ -17,4 +17,9 @@
         <ProjectReference Include="..\Facet\Facet.csproj" />
     </ItemGroup>
 
+    <!-- Resolve System.Collections.Immutable version conflict for net8.0 -->
+    <ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
+        <PackageReference Include="System.Collections.Immutable" />
+    </ItemGroup>
+
 </Project>
