--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,7 +64,7 @@ jobs:
       run: |
         foreach ($file in Get-ChildItem "./artifacts" -Recurse -Include *.nupkg) {
           Write-Host "Processing package: $($file.Name)"
-          
+
           if ($file.Name -like "Facet.Mapping.Expressions.*.nupkg") {
             Write-Host "Publishing Facet.Mapping.Expressions package..."
             dotnet nuget push $file `
@@ -75,6 +75,12 @@ jobs:
             Write-Host "Publishing Facet.Mapping package..."
             dotnet nuget push $file `
               --api-key "${{ secrets.NUGET_MAP_API_KEY }}" `
+              --source https://api.nuget.org/v3/index.json `
+              --skip-duplicate
+          } elseif ($file.Name -like "Facet.Extensions.EFCore.Mapping.*.nupkg") {
+            Write-Host "Publishing Facet.Extensions.EFCore.Mapping package..."
+            dotnet nuget push $file `
+              --api-key "${{ secrets.NUGET_API_KEY_EXTENSIONS_EF_MAPPING }}" `
               --source https://api.nuget.org/v3/index.json `
               --skip-duplicate
           } elseif ($file.Name -like "Facet.Extensions.EFCore.*.nupkg") {
