--- a/src/Facet/Facet.csproj
+++ b/src/Facet/Facet.csproj
@@ -12,6 +12,11 @@
         <GenerateAssemblyVersionAttribute>true</GenerateAssemblyVersionAttribute>
         <GenerateAssemblyFileVersionAttribute>true</GenerateAssemblyFileVersionAttribute>
         <GenerateAssemblyInformationalVersionAttribute>true</GenerateAssemblyInformationalVersionAttribute>
+
+        <!-- Prevent the assembly from being included in lib/ folder - it should only be in analyzers/ -->
+        <IncludeBuildOutput>false</IncludeBuildOutput>
+        <!-- Mark this as a development dependency -->
+        <DevelopmentDependency>true</DevelopmentDependency>
     </PropertyGroup>
 
     <ItemGroup>
