--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -36,6 +36,9 @@
 		<PackageVersion Include="Microsoft.CodeAnalysis.CSharp" Version="4.8.0" PrivateAssets="all" />
 		<PackageVersion Include="Microsoft.CodeAnalysis.Analyzers" Version="3.11.0" PrivateAssets="all" />
 
+		<!-- SourceLink for debugging support -->
+		<PackageVersion Include="Microsoft.SourceLink.GitHub" Version="8.0.0" />
+
 		<!-- Testing Dependencies -->
 		<PackageVersion Include="Microsoft.NET.Test.Sdk" Version="18.0.0" />
 		<PackageVersion Include="xunit" Version="2.9.3" />
