--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -3,6 +3,21 @@
 		<ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
 	</PropertyGroup>
 
+	<ItemGroup Condition="'$(TargetFramework)' == 'net10.0'">
+		<PackageVersion Include="Microsoft.EntityFrameworkCore" Version="10.0.0" />
+		<PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="10.0.0" />
+		<PackageVersion Include="Microsoft.EntityFrameworkCore.Sqlite" Version="10.0.0" />
+		<PackageVersion Include="Microsoft.EntityFrameworkCore.Tools" Version="10.0.0" />
+		<PackageVersion Include="Microsoft.EntityFrameworkCore.InMemory" Version="10.0.0" />
+		<PackageVersion Include="Microsoft.Extensions.Hosting" Version="10.0.0" />
+		<PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="10.0.0" />
+		<PackageVersion Include="Microsoft.Extensions.Logging" Version="10.0.0" />
+		<PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="10.0.0" />
+		<PackageVersion Include="Microsoft.Extensions.Configuration" Version="10.0.0" />
+		<PackageVersion Include="Microsoft.Extensions.Configuration.Json" Version="10.0.0" />
+		<PackageVersion Include="System.Collections.Immutable" Version="10.0.0" />
+	</ItemGroup>
+
 	<ItemGroup Condition="'$(TargetFramework)' == 'net9.0'">
 		<PackageVersion Include="Microsoft.EntityFrameworkCore" Version="9.0.10" />
 		<PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />
