--- a/src/Facet.Extensions/Facet.Extensions.csproj
+++ b/src/Facet.Extensions/Facet.Extensions.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
+        <TargetFrameworks>net8.0;net9.0;net10.0</TargetFrameworks>
         <IsPackable>true</IsPackable>
         <PackageId>Facet.Extensions</PackageId>
         <Description>Provider-agnostic extension methods for Facet.</Description>
