--- a/src/Facet.Mapping.Expressions/Facet.Mapping.Expressions.csproj
+++ b/src/Facet.Mapping.Expressions/Facet.Mapping.Expressions.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
+        <TargetFrameworks>net8.0;net9.0;net10.0</TargetFrameworks>
         <IsPackable>true</IsPackable>
         <PackageId>Facet.Mapping.Expressions</PackageId>
         <Description>Expression tree transformation and mapping utilities for Facet DTOs. Transform predicates, selectors, and other expressions between source entities and their Facet projections.</Description>
