--- a/src/Facet.Mapping/Facet.Mapping.csproj
+++ b/src/Facet.Mapping/Facet.Mapping.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
+        <TargetFrameworks>net8.0;net9.0;net10.0</TargetFrameworks>
         <IsPackable>true</IsPackable>
         <PackageId>Facet.Mapping</PackageId>
         <Description>Advanced static mapping configuration support for the Facet source generator with async capabilities.</Description>
