--- a/src/Facet/Facet.csproj
+++ b/src/Facet/Facet.csproj
@@ -12,6 +12,9 @@
         <GenerateAssemblyVersionAttribute>true</GenerateAssemblyVersionAttribute>
         <GenerateAssemblyFileVersionAttribute>true</GenerateAssemblyFileVersionAttribute>
         <GenerateAssemblyInformationalVersionAttribute>true</GenerateAssemblyInformationalVersionAttribute>
+        <!-- RS1038: Suppress Workspaces warning - CodeFixProvider needs Workspaces but only runs in IDE -->
+        <!-- TODO: Consider splitting analyzers and code fix providers into separate assemblies -->
+        <NoWarn>$(NoWarn);RS1038</NoWarn>
     </PropertyGroup>
 
     <ItemGroup>
