--- a/test/Facet.Tests/Facet.Tests.csproj
+++ b/test/Facet.Tests/Facet.Tests.csproj
@@ -26,11 +26,17 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Facet\Facet.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+    <ProjectReference Include="..\..\src\Facet.Attributes\Facet.Attributes.csproj" />
     <ProjectReference Include="..\..\src\Facet.Extensions\Facet.Extensions.csproj" />
     <ProjectReference Include="..\..\src\Facet.Mapping\Facet.Mapping.csproj" />
     <ProjectReference Include="..\..\src\Facet.Extensions.EFCore\Facet.Extensions.EFCore.csproj" />
     <ProjectReference Include="..\..\src\Facet.Extensions.EFCore.Mapping\Facet.Extensions.EFCore.Mapping.csproj" />
     <ProjectReference Include="..\..\src\Facet.Mapping.Expressions\Facet.Mapping.Expressions.csproj" />
+  </ItemGroup>
+
+  <!-- Manually include Facet.Attributes.dll as an analyzer dependency so generators can load it -->
+  <ItemGroup>
+    <Analyzer Include="..\..\src\Facet.Attributes\bin\$(Configuration)\netstandard2.0\Facet.Attributes.dll" />
   </ItemGroup>
 
 </Project>
