--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,7 +1,7 @@
 <Project>
   <PropertyGroup>
     <!-- Centralized version for all Facet packages -->
-    <Version></Version>
+    <Version>5.1.0</Version>
 
     <!-- Common package properties -->
     <Authors>Tim Maes</Authors>
