--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -16,6 +16,7 @@
 		<PackageVersion Include="Microsoft.Extensions.Configuration" Version="10.0.0" />
 		<PackageVersion Include="Microsoft.Extensions.Configuration.Json" Version="10.0.0" />
 		<PackageVersion Include="System.Collections.Immutable" Version="10.0.0" />
+		<PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="10.0.0" />
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)' == 'net9.0'">
