--- a/src/Facet.Dashboard/Facet.Dashboard.csproj
+++ b/src/Facet.Dashboard/Facet.Dashboard.csproj
@@ -24,6 +24,7 @@
 
     <ItemGroup>
         <EmbeddedResource Include="Assets\**\*" />
+        <EmbeddedResource Include="Templates\**\*.html" />
     </ItemGroup>
 
 </Project>
