--- a/src/Facet.Dashboard/Facet.Dashboard.csproj
+++ b/src/Facet.Dashboard/Facet.Dashboard.csproj
@@ -4,10 +4,15 @@
         <TargetFrameworks>net8.0;net9.0;net10.0</TargetFrameworks>
         <IsPackable>true</IsPackable>
         <PackageId>Facet.Dashboard</PackageId>
-        <Description>Swagger-like dashboard for visualizing Facet source types and their generated facets.</Description>
+        <Title>Facet Dashboard</Title>
+        <Description>Swagger-like dashboard for visualizing Facet source types and their generated facets in ASP.NET Core applications.</Description>
+        <PackageTags>facet dashboard visualization swagger aspnetcore dto projection source-generator</PackageTags>
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <GenerateAssemblyVersionAttribute>true</GenerateAssemblyVersionAttribute>
+        <GenerateAssemblyFileVersionAttribute>true</GenerateAssemblyFileVersionAttribute>
+        <GenerateAssemblyInformationalVersionAttribute>true</GenerateAssemblyInformationalVersionAttribute>
     </PropertyGroup>
 
     <ItemGroup>
